<resources>
    <string name="app_name">RCR</string>
    <string name="title_activity_team">Team</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_team1">Team!</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="remember_me">Remember me</string>
    <string name="next">next</string>
    <string name="password">Password</string>
    <string name="email">Email:</string>
    <string name="role">Role:</string>
    <string name="pasword">Pasword:</string>
    <string name="signup">Signup</string>
    <string name="name">Name:</string>
    <string name="rcr">RCR</string>
    <string name="sign_up">sign up</string>
    <string name="login">login</string>
    <string name="todo">TODO</string>
    <string name="e_mail">E-mail</string>
    <string name="branch_and_year">Branch and Year</string>
    <string name="field_of_interest">Field of Interest</string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="Signup">SIGNUP</string>
    <string name="Password">Password:</string>
    <string name="Chintu">Continue</string>
    <string name="update_now">Update Now</string>
    <string name="want_to_return">Want to return</string>
    <string name="components">COMPONENTS</string>
    <string name="title_activity_drawer">Drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="lo">Login</string>
    <string name="d_o_r_o_b_o_t_i_c_s_f_o_r_l_i_f_e">D o R o b o t i c s F o r L i f e</string>
    <string name="hello_rnxgians">Hello RNXGians....</string>
    <string name="rnxg_2022">RNXG 2022</string>
    <string name="upload">Upload data</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="teams">Teams</string>
    <string name="share">Share</string>
    <string name="about_sggs">About SGGS</string>
    <string name="about_rnxg">About RNXG</string>
    <string name="logout">Logout</string>
    <string name="admin">Admin</string>
    <string name="shri_guru_gobind_singhji_institute_of_engineering_and_technology_sggsiet_nanded_is_one_of_the_promising_leader_institutions_in_technical_education_research_and_technology_transfer_since_its_inception_the_institute_is_dedicated_to_students_centric_learning_and_believes_in_pursuing_academic_excellence_it_is_having_neat_clean_and_green_campus_spread_over_land_of_46_acres_it_receives_100_grant_in_aid_from_government_of_maharashtra_the_institute_offers_10_undergraduate_and_10_postgraduate_programs_it_also_offers_ph_d_programs_in_most_of_the_areas_of_engineering_under_swami_ramanand_teerth_marathwada_university_nanded_and_is_also_selected_as_research_center_for_faculty_under_qip_of_ministry_of_hrd_government_of_india_new_delhi_institute_boasts_for_having_25_placement_mnc_partners_average_placement_record_for_last_five_years_is_above_60_training_and_placement_cell_maintain_a_strong_bond_between_institute_and_the_industry_the_institute_is_having_a_very_active_alumni_network_with_seaa_sggs_engineers_alumni_association_as_its_front_end_registered_organization">Shri Guru Gobind Singhji Institute of Engineering and Technology (SGGSIET), Nanded, is one of the promising leader institutions in technical education, research and technology transfer. Since its inception, the institute is dedicated to students’ centric learning and believes in pursuing academic excellence. It is having neat, clean and green campus spread over land of 46 acres. It receives 100% grant-in aid from Government of Maharashtra. The institute offers 10 undergraduate and 10 postgraduate programs. It also offers Ph.D. programs in most of the areas of Engineering under Swami Ramanand Teerth Marathwada University, Nanded and is also selected as research center for faculty under QIP of Ministry of HRD, Government of India, New Delhi Institute boasts for having 25+ Placement MNC partners. Average placement record for last five years is above 60%. Training and Placement Cell maintain a strong bond between Institute and the Industry. The institute is having a very active Alumni network with SEAA (SGGS Engineers Alumni Association) as its front end registered organization.</string>
    <string name="team_rnxg">Team RNXG</string>
</resources>